New style css applied to the proyect

--- a/Recipes/hamburger.html
+++ b/Recipes/hamburger.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Hamburger</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>In-N-Out Double-Double Animal-Style Burger</h1>
+        <h1 class="title">In-N-Out Double-Double Animal-Style Burger</h1>
         <img src="https://www.allrecipes.com/thmb/gzAfy294P2F2jWJtL2p6-39D0mA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7152747CopycatIn-N-OutDouble-DoubleAnimal-StyleBurger4x3-57f69733c9104f739a33b4f26d2a05db.jpg">
-        <h2>Description</h2>
+        <h2 class="sub-title">Description</h2>
         <p>In-N-Out Double-Double Animal-Style Burger has 2 beef patties fried in mustard, caramelized oinions, cheese, and special mayo-ketchup sauce in addition to all the fixing of a regular Burger</p>
-        <h2>Ingredients</h2>
+        <h2 class="sub-title">Ingredients</h2>
         <ul>
             <li>1/2 cup mayonnaise</li>
             <li>1 1/2 tablespoons ketchup</li>
@@ -31,7 +32,7 @@
             <li>4 slices tomato</li>
             <li>2 leaves iceberg lettuce, torn</li>
         </ul>
-        <h2>Steps</h2>
+        <h2 class="sub-title">Steps</h2>
         <ol>
             <li>Stir together mayonnaise, hetchup, relish, sugar, and vinegar in a smal bowl for the sauce</li>
             <li>Heat butter and 1 tablespoon oil in a nonstick skillet over medium heat. Add onions and season with 1/4 teaspoon salt. Cook, stirring occasionally, until onions are tender and golden brown, about 20 minutes. When skillet starts to become dry, add 1 tablespoon water. Continue cooking, stirring often, adding more water as needed, 1 tablespoon at a time, until onions are very soft, deeply browned, and jammy, 10 to 15 minutes more. You may not need to use all the water. Remove from heat.</li>
