--- a/Recipes/pasta.html
+++ b/Recipes/pasta.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Pasta Recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Habanero Pepper Cream Pasta</h1>
+        <h1 class="title">Habanero Pepper Cream Pasta</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1054562.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Pasta picture">
-        <h2>Description</h2>
+        <h2 class="sub-title">Description</h2>
         <p>This is an entrée full of piquant flavor, an spicy cream sauce made with habanero peppers, garlic, and shallots.</p>
-        <h2>Ingredients</h2>
+        <h2 class="sub-title">Ingredients</h2>
         <ul>
             <li>1 (8 ounce) package cavatappi pasta</li>
             <li>1 teaspoon butter</li>
@@ -23,13 +24,12 @@
             <li>1 teaspoon black pepper</li>
             <li>1 cup grated parmesan cheese</li>
         </ul>
-        <h2>Steps</h2>
+        <h2 class="sub-title">Steps</h2>
         <ol>
             <li>Bring a large pot of lightly salted water to boil. Add pasta and cook until tender yet firm to the bite, 8 to 10 minutes</li>
             <li>While the pasta is cooking, melt butter with olive oil in a skillet over medium heat. Add shallot, garlic, adn habanero pepper; cook and stir until lightly browned and fragrant, about 2 minutes. Remove from heat.</li>
             <li>Bring cream to a simmer in a saucepan over medium heat. Stir in shallot mixture and tomato, then mix in flour and black pepper. Simmer until thickened, 5 to 8 minutes. Stir in parmesan cheese. Remove from heat and let sit until pasta finished.</li>
             <li>Drain pasta. Serve pasta on plates and ladle sauce over the top</li>
         </ol>
-
     </body>
 </html>
