--- a/Recipes/quesadillas.html
+++ b/Recipes/quesadillas.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>Quesadillas</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
-    <h1>Chicken Quesadillas</h1>
+    <h1 class="title">Chicken Quesadillas</h1>
     <img src="https://www.allrecipes.com/thmb/5UgSVIZu2GVmZ_8DLA3-nJS3kgU=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/21659-Chicken-Quesadillas-DDMFS-3291-4x3-Beauty-8849a09057d34cde9bad913783262833.jpg">
-    <h2>Description</h2>
+    <h2 class="sub-title">Description</h2>
     <p>This chicken quesadilla recipe is great Zesty chicken, cooked peppers, and melted cheese are a delightful combination. Cut into wedges and serve with sour cream and salsa.</p>
-    <h2>Ingredients</h2>
+    <h2 class="sub-title">Ingredients</h2>
     <ul>
         <li>1 pound skinless, boneless chicken breast, diced</li>
         <li>1 (1.27 ounce) packet fajita seasoning</li>
@@ -21,7 +22,7 @@
         <li>1 (8 ounce) package shredded Monterey Jack cheese</li>
         <li>1 tablespoon bacon bits</li>
     </ul>
-    <h2>Steps</h2>
+    <h2 class="sub-title">Steps</h2>
     <ol>
         <li>Gather ingredients, preheat the broiler, and lightly grease a baking sheet.</li>
         <li>Toss chicken with fajita seasoning, then spread onto the prepared baking sheet. Place under the broiler and cook until chicken is cooked through and no longer pink in the center, about 5 minutes.</li>
