added more style to the Recipes page

--- a/Recipes/pasta.html
+++ b/Recipes/pasta.html
@@ -11,7 +11,7 @@
         <h2 class="sub-title">Description</h2>
         <p>This is an entrée full of piquant flavor, an spicy cream sauce made with habanero peppers, garlic, and shallots.</p>
         <h2 class="sub-title">Ingredients</h2>
-        <ul>
+        <ul class="list">
             <li>1 (8 ounce) package cavatappi pasta</li>
             <li>1 teaspoon butter</li>
             <li>1 teaspoon olive oil</li>
@@ -25,7 +25,7 @@
             <li>1 cup grated parmesan cheese</li>
         </ul>
         <h2 class="sub-title">Steps</h2>
-        <ol>
+        <ol class="list">
             <li>Bring a large pot of lightly salted water to boil. Add pasta and cook until tender yet firm to the bite, 8 to 10 minutes</li>
             <li>While the pasta is cooking, melt butter with olive oil in a skillet over medium heat. Add shallot, garlic, adn habanero pepper; cook and stir until lightly browned and fragrant, about 2 minutes. Remove from heat.</li>
             <li>Bring cream to a simmer in a saucepan over medium heat. Stir in shallot mixture and tomato, then mix in flour and black pepper. Simmer until thickened, 5 to 8 minutes. Stir in parmesan cheese. Remove from heat and let sit until pasta finished.</li>
