--- a/Recipes/hamburger.html
+++ b/Recipes/hamburger.html
@@ -11,7 +11,7 @@
         <h2 class="sub-title">Description</h2>
         <p>In-N-Out Double-Double Animal-Style Burger has 2 beef patties fried in mustard, caramelized oinions, cheese, and special mayo-ketchup sauce in addition to all the fixing of a regular Burger</p>
         <h2 class="sub-title">Ingredients</h2>
-        <ul>
+        <ul class="list">
             <li>1/2 cup mayonnaise</li>
             <li>1 1/2 tablespoons ketchup</li>
             <li>1 tablespoon of pickle relish</li>
@@ -33,7 +33,7 @@
             <li>2 leaves iceberg lettuce, torn</li>
         </ul>
         <h2 class="sub-title">Steps</h2>
-        <ol>
+        <ol class="list">
             <li>Stir together mayonnaise, hetchup, relish, sugar, and vinegar in a smal bowl for the sauce</li>
             <li>Heat butter and 1 tablespoon oil in a nonstick skillet over medium heat. Add onions and season with 1/4 teaspoon salt. Cook, stirring occasionally, until onions are tender and golden brown, about 20 minutes. When skillet starts to become dry, add 1 tablespoon water. Continue cooking, stirring often, adding more water as needed, 1 tablespoon at a time, until onions are very soft, deeply browned, and jammy, 10 to 15 minutes more. You may not need to use all the water. Remove from heat.</li>
             <li>Shape beef into 8 patties, about 3/8-inch-thick and 4 inches in diameter. Sprinkle with pepper and remaining 1/2 teaspoon salt.</li>
