--- a/Recipes/quesadillas.html
+++ b/Recipes/quesadillas.html
@@ -10,7 +10,7 @@
     <h2 class="sub-title">Description</h2>
     <p>This chicken quesadilla recipe is great Zesty chicken, cooked peppers, and melted cheese are a delightful combination. Cut into wedges and serve with sour cream and salsa.</p>
     <h2 class="sub-title">Ingredients</h2>
-    <ul>
+    <ul class="list">
         <li>1 pound skinless, boneless chicken breast, diced</li>
         <li>1 (1.27 ounce) packet fajita seasoning</li>
         <li>1 tablespoon vegetable oil</li>
@@ -23,7 +23,7 @@
         <li>1 tablespoon bacon bits</li>
     </ul>
     <h2 class="sub-title">Steps</h2>
-    <ol>
+    <ol class="list">
         <li>Gather ingredients, preheat the broiler, and lightly grease a baking sheet.</li>
         <li>Toss chicken with fajita seasoning, then spread onto the prepared baking sheet. Place under the broiler and cook until chicken is cooked through and no longer pink in the center, about 5 minutes.</li>
         <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
